# sam-card-game

./: .clang-format  .clang-tidy  .clangd  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
assets/: README.md
docs/superpowers/plans/: 2026-06-28-card-game-scaffold.md
docs/superpowers/specs/: 2026-06-28-card-game-scaffold-design.md
scripts/: run_clang_tidy.py
src/: Config.hpp  main.cpp
src/app/: Game.cpp  Game.hpp
src/cards/: Card.cpp  Card.hpp  Deck.cpp  Deck.hpp  Inventory.cpp  Inventory.hpp
src/input/: InputHandler.cpp  InputHandler.hpp
src/players/: AIPlayer.cpp  AIPlayer.hpp  HumanPlayer.cpp  HumanPlayer.hpp  Player.hpp
src/render/: Animation.cpp  Animation.hpp  CardRenderer.cpp  CardRenderer.hpp  InventoryRenderer.cpp  InventoryRenderer.hpp
src/rules/: GameState.cpp  GameState.hpp  Rules.cpp  Rules.hpp
tests/: animation_test.cpp  deck_test.cpp
